# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.43 2005/01/16 07:11:13 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  16 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  RunInstall.py called poll_notifications() in gtk idle loop and progress
  bar/status display work

  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.
  USE flag editor now generated proper + and - USE line. CFLAGS ComboBoxes
  and Entry in MakeDotConf. CFLAGS is set in InstallProfile. MakeDotConf does
  CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES. New screen/code to actually
  run the install.

  15 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - added support for a custom ethernet device.
  Fixed a lot of little bugs having to do with user interaction,
  and added support for loading from the .xml file.

  14 Jan 2005; John Laliberte <allanonl@bu.edu>
  Timezone.py - fixed bug where after selecting a timezone, it would jump
  to the parent of the selection.
  Networking.py - fixed bug where some fields would be available if device
  was selected and was dhcp.  also integrated into backend ( one way only
  so far, only will save, not load settings yet ).  Added error box to
  ask the user if they want to replace settings or cancel if the device
  is already listed.
  
  14 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added description to the top of NetworkMounts and changed the spacing
  of the description on Partitioning. In NetworkMounts, activate() now
  disables all buttons except 'New'. NetworkMounts now does field
  validation. Welcome.py code cleanups. Created Template.py based on
  Welcome.py. Rewrote Stage.py from scratch. Rewrote PortageTree.py.
  Added set_size_request() calls in PortageTree and Stage for alignment.