@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.43 2005/01/16 07:11:13 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.44 2005/01/16 07:15:25 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
@@ -19,6 +19,7 @@
   Networking.py - added support for a custom ethernet device.
   Fixed a lot of little bugs having to do with user interaction,
   and added support for loading from the .xml file.
+  Networking.py - added support for hostname and dnsdomainname.
 
   14 Jan 2005; John Laliberte <allanonl@bu.edu>
   Timezone.py - fixed bug where after selecting a timezone, it would jump
